	instead of "pin###" if connecting by position instead of by name.

***	Added Verilog::SigParser->funcsignal callback for variables declared
	inside a function or task.  bug26972.  [Mark Nodine]
	
***	Added Verilog::SigParser->instant callbacks for gate primitives.
	bug26969, bug27062. [Mark Nodine]
	
***	Added Verilog::SigParser->parampin callbacks for parameter connections
	to instantiations.
	
**	Verilog::Parser has been replaced with the front end of the
	SigParser.  The preproc and syscall callbacks were added

***	Require call to Verilog::Parser->eof() at the end of all parsers.
	
***	Changed Verilog::Parser->unreadback() method to not clear state.
	You must now call unreadback('') to clear the unreadback characters.

***	The long depreciated Verilog::Parse module has been removed.

****	Fixed Verilog::Parser mis-parsing spaces in numbers, bug27070.

****	Fixed Verilog::SigParser bug26141, bug26940, bug26968, bug26969,
	bug26970, bug26972, bug26997, bug27009, bug27010, bug27013,
	bug27036, bug27037, bug27039, bug27045, bug27062, bug27066,
	bug27067, bug27072.  [Mark Nodine, et al]

* Verilog::Language 2.380 2007/05/27

***	Added new Verilog-Perl.pod documentation overview.

***	Verilog::Parser and Verilog::SigParser objects must call the eof method
	to insure forward compatibility.

***	Vpm $info etc have been removed, now only $uinfo, etc are supported.
	This avoids conflict with SystemVerilog $error function.  [Tad Truex]

***	Verilog::Language keywords now uses the `begin_keywords standard names.

***	Added Verilog::Language::number_bitvector and number_bigint for returning
	Bit::Vector and Math::BigInt objects.  bug26967.  [Mark Nodine]

****	Fix --help to use Pod::Usage instead of depreciated pod2text.

****	Ignore quotes inside `protected/`endprotected blocks.

****	Drop end-of-file ctrl-Z's when preprocessing input.

* Verilog::Language 2.373 2007/04/02

***     Fix vppp breaking with Getopt::Long 2.36.  [Andreas J. König]
